RESOLVED FIXED261708
Mix-blend-mode incorrectly blends with view base color
https://bugs.webkit.org/show_bug.cgi?id=261708
Summary Mix-blend-mode incorrectly blends with view base color
Matt Woodrow
Reported 2023-09-18 16:29:01 PDT
Mix-blend-mode on an element that blends into the 'Root Element Group' should have only the root element's background color, or transparent if none. We're including the opaque white base color of the RenderView too, which is incorrect.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-18 16:30:04 PDT
Matt Woodrow
Comment 2 2023-09-18 16:33:34 PDT
Matt Woodrow
Comment 3 2023-09-19 16:41:58 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/42069
EWS
Comment 4 2023-09-19 20:22:25 PDT
Committed 268173@main (4f26343f6d0b): <https://commits.webkit.org/268173@main> Reviewed commits have been landed. Closing PR #17884 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.